# russ

./: Cargo.toml
src/: app.rs  background.rs  config.rs  lib.rs  main.rs  render.rs  widget.rs  window.rs
src/config/: background.rs  font.rs  widget.rs
src/widget/: clock.rs  date.rs  text.rs
