[package]
name = "russ"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
confy = "0.6.1"
cosmic-text = "0.12.1"
image = "0.25.2"
pixels = "0.13.0"
serde = { version = "1.0.209", features = ["derive"] }
spin = "0.9.8"
swash = "0.1.18"
thiserror = "1.0.63"
tiny-skia = "0.11.4"
winit = { version = "0.30.5", features = ["rwh_05"] }
